--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,7 +1,7 @@
 .l-maintop {
 
   &__img {
-    background-image: url(/img/frontpage_image.jpg);
+    background-image: url(../img/frontpage_image.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
