--- a/scss/object/project/_map.scss
+++ b/scss/object/project/_map.scss
@@ -1,7 +1,7 @@
 .p-map {
 
   &__img {
-    background-image: url(/img/map_image.jpg);
+    background-image: url(../img/map_image.jpg);
     background-position: center;
     background-size: cover;
     background-color: #fff;
