--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .l-footer {
-  background-image: url(/img/footer_image.jpg);
+  background-image: url( ../img/footer_image.jpg);
   height: 150px;
   color: #fff;
   font-weight: initial;
@@ -44,3 +44,5 @@
   }
 
 }
+
+
