--- a/scss/object/project/_hero.scss
+++ b/scss/object/project/_hero.scss
@@ -1,7 +1,7 @@
 .p-hero {
 
   &__front {
-    background-image: url(/img/frontpage_image.jpg);
+    background-image: url(../img/frontpage_image.jpg);
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -18,7 +18,7 @@
   }
 
   &__archive {
-    background-image: url(/img/archiveTop_image.jpg);
+    background-image: url(../img/archiveTop_image.jpg);
     background-position: center;
     background-size: 200%;
     width: 100%;
@@ -59,7 +59,7 @@
   &__single {
     width: 100%;
     height: 225px;
-    background-image: url(/img/singlepage_ham-burger-with-vegetables.jpg);
+    background-image: url(../img/singlepage_ham-burger-with-vegetables.jpg);
     background-position: center;
     background-size: auto;
     margin-bottom: 35px;
@@ -77,7 +77,7 @@
   &__page {
     width: 100%;
     height: 225px;
-    background-image: url(/img/page_black-steel-lamp-post.jpg);
+    background-image: url(../img/page_black-steel-lamp-post.jpg);
     background-position: center;
     background-size: cover; 
     margin-bottom: 35px;
