--- a/scss/style.css
+++ b/scss/style.css
@@ -107,7 +107,7 @@ select {
 }
 
 .l-footer {
-  background-image: url(/img/footer_image.jpg);
+  background-image: url(../img/footer_image.jpg);
   height: 150px;
   color: #fff;
   font-weight: initial;
@@ -185,7 +185,7 @@ select {
 }
 
 .l-maintop__img {
-  background-image: url(/img/frontpage_image.jpg);
+  background-image: url(../img/frontpage_image.jpg);
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -480,11 +480,11 @@ select {
 }
 
 .p-card__TakeOut {
-  background-image: url(/img/frontpage_card1.jpg);
+  background-image: url(../img/frontpage_card1.jpg);
 }
 
 .p-card__EatIn {
-  background-image: url(/img/frontpage_card2.jpg);
+  background-image: url(../img/frontpage_card2.jpg);
 }
 
 @media (min-width: 768px) {
@@ -578,7 +578,7 @@ select {
 }
 
 .p-map__img {
-  background-image: url(/img/map_image.jpg);
+  background-image: url(../img/map_image.jpg);
   background-position: center;
   background-size: cover;
   background-color: #fff;
@@ -638,7 +638,7 @@ select {
 }
 
 .p-hero__front {
-  background-image: url(/img/frontpage_image.jpg);
+  background-image: url(../img/frontpage_image.jpg);
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -659,7 +659,7 @@ select {
 }
 
 .p-hero__archive {
-  background-image: url(/img/archiveTop_image.jpg);
+  background-image: url(../img/archiveTop_image.jpg);
   background-position: center;
   background-size: 200%;
   width: 100%;
@@ -705,7 +705,7 @@ select {
 .p-hero__single {
   width: 100%;
   height: 225px;
-  background-image: url(/img/singlepage_ham-burger-with-vegetables.jpg);
+  background-image: url(../img/singlepage_ham-burger-with-vegetables.jpg);
   background-position: center;
   background-size: auto;
   margin-bottom: 35px;
@@ -727,7 +727,7 @@ select {
 .p-hero__page {
   width: 100%;
   height: 225px;
-  background-image: url(/img/page_black-steel-lamp-post.jpg);
+  background-image: url(../img/page_black-steel-lamp-post.jpg);
   background-position: center;
   background-size: cover;
   margin-bottom: 35px;
